# Energy-saving-in-sensors--networks

./: .gitignore  Bib.bib  Chapitre1.doc  Diagramme_Gantt.xls  README  README2  README2~  README~
Simulations/protocols/: Makefile.am  README  README~
Simulations/protocols/APP_broadcast/: Makefile  Makefile.in  aclocal.m4
Simulations/protocols/APP_broadcast/.deps/: libapplication_broadcast_la-app.Plo
Simulations/protocols/APP_broadcast/.libs/: libapplication_broadcast.la  libapplication_broadcast.lai  libapplication_broadcast.so.0.0.0
Simulations/protocols/APP_broadcast/src/: app.c
Simulations/protocols/AnciennesVersion/: README  README~
Simulations/protocols/AnciennesVersion/LBIP0.3_stable/: README  README~
Simulations/protocols/AnciennesVersion/MPR0.05_testTwoHop/: mpr.c  testMPR.xml
Simulations/protocols/AnciennesVersion/RBH/: list.h
Simulations/protocols/BIP/: BIP_Protocole.c  Makefile  Makefile.am  Makefile.am~  Makefile.in  config.status  configure  energy  epidemic.c~  flood.c~  graphBIP  lbip.c~  libapplication_app.la  libapplication_app_la-app.lo  libapplication_app_la-time_wsnet.lo  libapplication_bip.la  libapplication_bip_la-AddedFunction.lo  libapplication_bip_la-Implementation.lo  libapplication_bip_la-Initialisation.lo  libapplication_bip_la-arbre.lo  libapplication_bip_la-bip.lo  libapplication_bip_la-conversion.lo  libapplication_bip_la-list.lo  libapplication_bip_la-listNodes.lo  libapplication_bip_la-list_connected.lo  libapplication_bip_la-list_de_list.lo  libapplication_bip_la-list_de_listNodes.lo  libapplication_bip_la-list_paquet.lo  libapplication_bip_la-one_hop.lo  libapplication_bip_la-time_wsnet.lo  libapplication_bip_la-two_hop.lo  librouting_bip.la  librouting_bip_la-AddedFunction.lo  librouting_bip_la-Implementation.lo  librouting_bip_la-Initialisation.lo  librouting_bip_la-arbre.lo  librouting_bip_la-bip.lo  librouting_bip_la-conversion.lo  librouting_bip_la-list.lo  librouting_bip_la-listNodes.lo  (+7 more)
Simulations/protocols/BIP/.deps/: libapplication_app_la-app.Plo  libapplication_app_la-time_wsnet.Plo  libapplication_bip_la-AddedFunction.Plo  libapplication_bip_la-BIP_Protocole.Plo  libapplication_bip_la-Implementation.Plo  libapplication_bip_la-Initialisation.Plo  libapplication_bip_la-arbre.Plo  libapplication_bip_la-bip.Plo  libapplication_bip_la-conversion.Plo  libapplication_bip_la-list.Plo  libapplication_bip_la-listNodes.Plo  libapplication_bip_la-list_connected.Plo  libapplication_bip_la-list_de_list.Plo  libapplication_bip_la-list_de_listNodes.Plo  libapplication_bip_la-list_paquet.Plo  libapplication_bip_la-one_hop.Plo  libapplication_bip_la-time_wsnet.Plo  libapplication_bip_la-two_hop.Plo  libapplication_dlbip_la-dlbip.Plo  libapplication_epidemic_la-epidemic.Plo  libapplication_lbop_la-lbop.Plo  libapplication_mpr_la-mpr.Plo  libapplication_nes_la-nes.Plo  libapplication_rbop_la-rbop.Plo  librouting_bip_la-AddedFunction.Plo  librouting_bip_la-Implementation.Plo  librouting_bip_la-Initialisation.Plo  librouting_bip_la-arbre.Plo  librouting_bip_la-bip.Plo  librouting_bip_la-conversion.Plo  librouting_bip_la-list.Plo  librouting_bip_la-listNodes.Plo  librouting_bip_la-list_connected.Plo  librouting_bip_la-list_de_list.Plo  librouting_bip_la-one_hop.Plo  (+19 more)
Simulations/protocols/DLBIP/: Makefile.am  Makefile.in  energy  graphBIP
Simulations/protocols/ENERGIE/: Makefile  Makefile.am  Makefile.in  libenergy_theorie.la
Simulations/protocols/FA_routing/: FA.c  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  libEnergyTest.la  libFA_routing.la  libFA_routing_la-FA.lo  libRIP.la  libtool
Simulations/protocols/FLOOD/: 1  Makefile.am  Makefile.in  graphBIP
Simulations/protocols/LBIP/: Makefile  Makefile.am  Makefile.in  config.h  config.status  energy  graphBIP  librouting_lbip.la  librouting_lbip_la-BIP_tree_utils.lo  librouting_lbip_la-lbip.lo  librouting_lbip_la-one_hop.lo  librouting_lbip_la-two_hop.lo  routing_bip.la  testLBIP.xml
Simulations/protocols/LBIP0.1_etapeInitial/: README  README~  lbip.c  testLBIP.xml
Simulations/protocols/LBIP0.2_passtable/: README~  lbip.c  testLBIP.xml
Simulations/protocols/LBIP0.3_stable/: lbip.c
Simulations/protocols/LBOP/: Makefile.am  Makefile.in  librouting_bip.la
Simulations/protocols/MACTER/: Makefile.am  Makefile.am~  Makefile.in  configure
Simulations/protocols/MPR0.05_testTwoHop/: README  README~
Simulations/protocols/NES0.2_stable/: nes.c  test.xml
Simulations/protocols/NES0.3stable/: README  README~  nes.c
Simulations/protocols/NouvelleVersion/: BIP_Protocole.c  Makefile  Makefile.am  Makefile.am~  Makefile.in  function_RBH.h~  graphBIP  libapplication_bip_la-BIP_Protocole.lo
Simulations/protocols/RBH/: arbre.h  list.h  list_connected.h  list_de_list.h  one_hop.h  struct_RBH.h  two_hop.h
Simulations/protocols/RBOP/: Makefile.am  Makefile.in  energy  lbop.c  testRBOP.xml
Simulations/protocols/simulations/: Protole IDs.ods
Simulations/protocols/structure/: Makefile  Makefile.am  Makefile.in  config.status  libstructure_la-arbre.lo  libstructure_la-graphe.lo  libstructure_la-heap.lo  libstructure_la-listNodes.lo  libstructure_la-list_connected.lo  libstructure_la-list_de_list.lo  libtool
Simulations/protocols/tests/: 0.xml  0.xml~  1.xml~  3.xml  3.xml~  4.xml~  DLBIP_article_example.xml  END  ERREUR  LBIP_article_example.xml  ShowGraphe  courbe1  courbe2  energy  final  graphBIP  graphFLOOD  graphLBIP  graphLBOP  graphNES  graphRBOP  lifetime  lifetimeconnexe  lifetime~  queue.cpp  rayon  replay  res.cpp  res.cpp~  s  testBIP.xml  testDLBIP.xml  testFLOOD.xml  testLBIP.xml  testLBIP20.xml  testLBIP50.xml  testLBOP.xml  testNES.xml  testRBOP.xml  topo.txt  (+1 more)
Simulations/wsnet/src/: Makefile  Makefile.am  Makefile.in  STATUS  antenna.c  bundle.c  bundle_config.h  cbr.xml  config.xml  data_d.xml  entity.c  entity_config.h  environment_config.c  ioctl_message.h  mac.xml  main.c  measure.h  measure_config.c  mobility.c  mobility.h  modelutils.c  modulation.c  monitor.c  node.c  noise.c  packet.c  probabilistic_distribution.c  rng.c  wsnet
(+2930 files in other folders)
