ACLOCAL_AMFLAGS=-I m4

lib_LTLIBRARIES = libapplication_nes.la  libapplication_mpr.la  libapplication_lbip.la libapplication_dlbip.la libapplication_rbop.la libapplication_lbop.la



libapplication_nes_la_CFLAGS = $(CFLAGS) $(GLIB_FLAGS) -Wall
libapplication_nes_la_SOURCES = nes.c
libapplication_nes_la_LDFLAGS = -module


libapplication_mpr_la_CFLAGS = $(CFLAGS) $(GLIB_FLAGS) -Wall
libapplication_mpr_la_SOURCES = mpr.c
libapplication_mpr_la_LDFLAGS = -module


libapplication_lbip_la_CFLAGS = $(CFLAGS) $(GLIB_FLAGS) -Wall
libapplication_lbip_la_SOURCES = lbip.c
libapplication_lbip_la_LDFLAGS = -module


libapplication_dlbip_la_CFLAGS = $(CFLAGS) $(GLIB_FLAGS) -Wall
libapplication_dlbip_la_SOURCES = dlbip.c
libapplication_dlbip_la_LDFLAGS = -module

libapplication_rbop_la_CFLAGS = $(CFLAGS) $(GLIB_FLAGS) -Wall
libapplication_rbop_la_SOURCES = rbop.c
libapplication_rbop_la_LDFLAGS = -module


libapplication_lbop_la_CFLAGS = $(CFLAGS) $(GLIB_FLAGS) -Wall
libapplication_lbop_la_SOURCES = lbop.c
libapplication_lbop_la_LDFLAGS = -module

