
lib_LTLIBRARIES = libantenna_omnidirectionnal.la libantenna_isotropic.la 

libantenna_omnidirectionnal_la_CFLAGS = $(CFLAGS) $(GLIB_FLAGS) $(GSL_FLAGS) -I$(top_srcdir)/src -Wall

libantenna_omnidirectionnal_la_SOURCES = omnidirectionnal.c

libantenna_omnidirectionnal_la_LDFLAGS = -module

libantenna_isotropic_la_CFLAGS = $(CFLAGS) $(GLIB_FLAGS) $(GSL_FLAGS) -I$(top_srcdir)/src -Wall

libantenna_isotropic_la_SOURCES = isotropic.c

libantenna_isotropic_la_LDFLAGS = -module

