lib_LTLIBRARIES = libenvironment_fire.la libenvironment_collection_ctrl.la

libenvironment_fire_la_CFLAGS = $(GLIB_FLAGS) $(CFLAGS) $(GSL_FLAGS) -I$(top_srcdir)

libenvironment_fire_la_SOURCES = fire.c

libenvironment_fire_la_LDFLAGS = -module

libenvironment_collection_ctrl_la_CFLAGS = $(GLIB_FLAGS) $(CFLAGS) $(GSL_FLAGS) -I$(top_srcdir)

libenvironment_collection_ctrl_la_SOURCES = collection_ctrl.c

libenvironment_collection_ctrl_la_LDFLAGS = -module
