lib_LTLIBRARIES = libmac_idealmac.la libmac_dcf_802_11.la libmac_802_15_4_868_bpsk_u_csma_ca.la libmac_802_15_4_902_bpsk_u_csma_ca.la libmac_802_15_4_2400_oqpsk_u_csma_ca.la libmac_bmac.la libmac_skeleton.la libmac_xmac.la 


libmac_idealmac_la_CFLAGS = $(GLIB_FLAGS) $(CFLAGS) $(GSL_FLAGS) -I$(top_srcdir)

libmac_idealmac_la_SOURCES = idealmac.c

libmac_idealmac_la_LDFLAGS = -module

libmac_dcf_802_11_la_CFLAGS = $(GLIB_FLAGS) $(CFLAGS) $(GSL_FLAGS) -I$(top_srcdir)

libmac_dcf_802_11_la_SOURCES = dcf_802_11.c

libmac_dcf_802_11_la_LDFLAGS = -module

libmac_802_15_4_868_bpsk_u_csma_ca_la_CFLAGS = $(GLIB_FLAGS) $(CFLAGS) $(GSL_FLAGS) -DBPSK_868 -I$(top_srcdir)

libmac_802_15_4_868_bpsk_u_csma_ca_la_SOURCES = 802_15_4_u_csma_ca.c

libmac_802_15_4_868_bpsk_u_csma_ca_la_LDFLAGS = -module

libmac_802_15_4_902_bpsk_u_csma_ca_la_CFLAGS = $(GLIB_FLAGS) $(CFLAGS) $(GSL_FLAGS) -DBPSK_902 -I$(top_srcdir)

libmac_802_15_4_902_bpsk_u_csma_ca_la_SOURCES = 802_15_4_u_csma_ca.c

libmac_802_15_4_902_bpsk_u_csma_ca_la_LDFLAGS = -module

libmac_802_15_4_2400_oqpsk_u_csma_ca_la_CFLAGS = $(GLIB_FLAGS) $(CFLAGS) $(GSL_FLAGS) -DOQPSK_2400 -I$(top_srcdir)

libmac_802_15_4_2400_oqpsk_u_csma_ca_la_SOURCES = 802_15_4_u_csma_ca.c

libmac_802_15_4_2400_oqpsk_u_csma_ca_la_LDFLAGS = -module

libmac_bmac_la_CFLAGS = $(GLIB_FLAGS) $(CFLAGS) $(GSL_FLAGS) -I$(top_srcdir)

libmac_bmac_la_SOURCES = bmac.c

libmac_bmac_la_LDFLAGS = -module

libmac_skeleton_la_CFLAGS = $(GLIB_FLAGS) $(CFLAGS) $(GSL_FLAGS) -I$(top_srcdir)

libmac_skeleton_la_SOURCES = skeleton.c

libmac_skeleton_la_LDFLAGS = -module

libmac_xmac_la_CFLAGS = $(GLIB_FLAGS) $(CFLAGS) $(GSL_FLAGS) -I$(top_srcdir)

libmac_xmac_la_SOURCES = xmac.c

libmac_xmac_la_LDFLAGS = -module
