lib_LTLIBRARIES = librouting_filestatic.la librouting_greedy.la librouting_geostatic.la

librouting_filestatic_la_CFLAGS = $(GLIB_FLAGS) $(CFLAGS) $(GSL_FLAGS) -I$(top_srcdir)

librouting_filestatic_la_SOURCES = filestatic.c

librouting_filestatic_la_LDFLAGS = -module

librouting_greedy_la_CFLAGS = $(GLIB_FLAGS) $(CFLAGS) $(GSL_FLAGS) -I$(top_srcdir)

librouting_greedy_la_SOURCES = greedy.c

librouting_greedy_la_LDFLAGS = -module

librouting_geostatic_la_CFLAGS = $(GLIB_FLAGS) $(CFLAGS) $(GSL_FLAGS) -I$(top_srcdir)

librouting_geostatic_la_SOURCES = geostatic.c

librouting_geostatic_la_LDFLAGS = -module

