dist_bin_SCRIPTS = wsnet-run-simulations

wsnet-run-simulations: wsnet-run-simulations.sh
	cp wsnet-run-simulations.sh wsnet-run-simulations
	chmod +x wsnet-run-simulations

make-clean-for-commit: make-clean-for-commit.sh
	cp make-clean-for-commit.sh make-clean-for-commit
	chmod +x make-clean-for-commit
